# ChatGPT_CLI_Rust

./: Cargo.toml  README.md
src/: gptcli_net.rs  gptcli_utils.rs  main.rs
