[package]
name = "chatgpt_rust"
version = "0.2.0"
edition = "2021"
authors = ["zhulg <lg.json@gmail.com>"]
license = "MIT"
description = "A tool for chatting using the ChatGPT API "
readme = "README.md"
repository = "https://github.com/zhulg/ChatGPT_CLI_Rust"
keywords = ["cli", "ChatGPT", "OpenAI", "gpt-3", "chatbot"]
categories = ["command-line-utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
dialoguer = "0.10.3"
dotenv = "0.15.0"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0"
clap = "4.0.18"
tokio = { version = "1.26.0", features = ["full"] }
text2art = "1.0.1"
encoding_rs = "0.8.32"
rustyline = "11.0.0"
indicatif = "0.17.3"
